# hiring-data-engineer-task

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  scripts.py  seed.py
migrations/: clickhouse-migrations.yml
migrations/clickhouse/: 1__create_schema.sql  2__create_test_table.sql  V1__create_schema.sql
migrations/postgres/: V2__create_indexes.sql
pipeline/: postgres.py  spark.py
scripts/: ch_clean.sh  ch_migrations.sh  docker-build.sh  docker-restart-unhealthy.sh  docker-run.sh  prefect_deploy.sh  prefect_deploy_cron.sh
src/: clickhouse.py  clickhouse_spark.py  db.py  kpi_api.py  pipeline.py  postgres.py  postgres_spark.py  prefect_run_container.py  spark.py  workflow.py
tests/: conftest.py
tests/e2e/: clickhouse_e2e_test.py  clickhouse_spark__e2e_test.py  docker_pull.py  kpi_api_test.py  pipeline_e2e_test.py  postgres_e2e_test.py  postgres_spark_e2e_test.py  spark_e2e_test.py  workflow_e2e_test.py
